--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@ input, textarea { outline: none; }
 input:focus:required:invalid, textarea:focus:required:invalid { border-color: red; }
 input:required:valid, textarea:required:valid { border-color: green; }
 
+:root{
+	font-size: 16px;
+	line-height: 1; 
+}
+
 body {
-	font-family: var(--userfont);
-	font-size: var(--regular-text);
-	line-height: var(--lineheight);
 	color: white;
 	width: 100%;
 	height: 100%; 
@@ -35,20 +37,13 @@ body {
 	overflow-x: hidden;
 }
 
-/* USER STYLES */
-
-
-
-:root{
-	font-size: 10px;
-	line-height: 1; 
-}
 footer,aside,header,
 nav,article,menu,
 figure,section,picture,
 video,audio{
 	display: block;
 }
+
 *{
 	box-sizing: border-box;
 	clear: both;
@@ -99,115 +94,4 @@ img{
 	padding-left: 10px;
 	padding-right: 10px;
 }
-          /* //////// main style /////////*/
-
-/*///header_navigation///*/
-
-.header__navigation{
-	min-height: 150px;
-	max-width: 1620px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}	
-.header__logo a{
-	width: 97px;
-	height: 97px;
-	background: url(../img/header_img/logo.png) no-repeat;
-	background-size: cover;
-}	
-.header__nav{
-	display: flex;
-}
-.header__nav li{
-	margin-left: 38px;
-	position: relative;
-}
-.header__nav li::after{
-	content: "";
-	display: block;
-	position: absolute;
-	bottom: -3px;
-	height: 1px;
-	width: 100%;
-	background: transparent;
-	transition: 0.5s;
-}
-.header__nav li:hover::after{
-	background: #e94e1b; 
-}
-/*//////////// hide menu ///////////////*/
-
-.container_hidemenu{
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 1000;
-	background: rgb(200,200,200,.4);
-	width: 150px;
-	height: 100%;
-	transition: 1s;
-	transform: translateX(-150px);
-	display: none;
-}
-.container_hidemenu.isActive{
-	transform: translateX(0px);
-}
-.gamburger-hide-menu{	
-	position: absolute;
-	top: 0;
-	left: 0;	
-}
-.container_gamburger{
-	width: 25px;
-	height: 18px;
-	position: absolute;
-	top: 20px;
-	right: -40px;
-	z-index: 1000;
-	transition: 1s;
-}
-.gamburgermenu{
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-.gamburger{
-	position: absolute;
-	display: block;
-	width: 25px;
-	height: 2px;
-	background: #fff;
-	transition-duration: 0.3s, 0.3s;
-	transition-delay: 0.3s,0s;	
-}
-.gamburger:nth-child(1){
-	top: 1px;
-	transition-property: top,transform;
-}
-.gamburger:nth-child(2){
-	top: 7px;
-}
-.gamburger:nth-child(3){
-	top: 13px;
-	transition-property: top,transform;
-}
-
-.isActive .container_gamburger{
-	top: 10px;
-	right: 5px;
-}
-.isActive .gamburger:nth-child(1){
-	top: 7px;
-  transform: rotate(45deg);
-  transition-delay: 0s,0.3s;  
-}
-.isActive .gamburger:nth-child(2){
-	background: none;
-}
-.isActive .gamburger:nth-child(3){
-	top: 7px;
-  transform: rotate(-45deg);
-  transition-delay: 0s,0.3s;  
-}
-/*\\\header_navigation\\\*/          
+          /* //////// main user style /////////*/
